--- a/src/css/default.scss
+++ b/src/css/default.scss
@@ -1,19 +1,22 @@
+$primary-color: #27d7ff;
+$secondary-color: #49deda;
+$text-area-background: rgba(55, 55, 55, 0.22);
+
 * {
   .header {
     color: #2216d1;
   }
 }
-$primary-color: #27d7ff;
-$secondary-color: #49deda;
-#app{
+
+#app {
   background: $primary-color;
   background: -moz-linear-gradient(-45deg, $primary-color 0%, $secondary-color 100%);
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,$primary-color), color-stop(100%,$secondary-color));
-  background: -webkit-linear-gradient(-45deg, $primary-color 0%,$secondary-color 100%);
-  background: -o-linear-gradient(-45deg, $primary-color 0%,$secondary-color 100%);
-  background: -ms-linear-gradient(-45deg, $primary-color 0%,$secondary-color 100%);
-  background: linear-gradient(135deg, $primary-color 0%,$secondary-color 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffae27', endColorstr='#de496d',GradientType=1 );
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, $primary-color), color-stop(100%, $secondary-color));
+  background: -webkit-linear-gradient(-45deg, $primary-color 0%, $secondary-color 100%);
+  background: -o-linear-gradient(-45deg, $primary-color 0%, $secondary-color 100%);
+  background: -ms-linear-gradient(-45deg, $primary-color 0%, $secondary-color 100%);
+  background: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffae27', endColorstr='#de496d', GradientType=1);
   width: 100vw;
   height: 100vh;
   a {
@@ -32,9 +35,14 @@ $secondary-color: #49deda;
     color: rgba(14, 11, 73, 0.59);
     text-decoration: none;
   }
-  
-  .credits{
+
+  .credits {
     color: white;
+  }
+  textarea {
+    height: 550px;
+    width: 100%;
+    background: $text-area-background;
   }
 }
 
